minor - fixed wrong margin on narrow-screen portfolio carousel

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -184,7 +184,8 @@ body {
 }
 
 .no-top-margin {
-  @media only screen and (min-width: 480px) {
+
+  @media only screen and (min-width: 992px) {
     margin-top: 0;
   }
 }
